# tidal-guiot

./: .gitignore  README.md  TidalGuiot.cabal
src/Sound/Tidal/Guiot/: Boot.hs  Control.hs  Functions.hs  Rhythm.hs  Scales.hs  Utils.hs
